# DL_SportsBettingBot

./: .env.example  .gitignore  LICENSE  README.md  api_client.py  backtest_model.py  build_dataset.py  config.py  database.py  main_safe.py  main_value.py  master.py  model.py  pyproject.toml  requirements.txt  retrain_bot.py  settle_bets.py  train.py
.github/workflows/: ci.yml
analysis/: make_research_note.py
data/: README.md  bet_history.json  historical_dataset_2024.json  soccer_data_full.csv
docs/: RESEARCH_NOTE.md  research_note_stats.json
models/: mappings.json  soccer_model_full.pth
quantbet/: __init__.py  api_client.py  backtest.py  baselines.py  build_dataset.py  cli.py  config.py  features.py  ledger.py  model.py  report.py  retrain.py  settlement.py  slip.py  strategy.py  train.py
tests/: test_backtest.py  test_baselines.py  test_features.py  test_ledger.py  test_model.py  test_settlement.py  test_slip.py  test_strategy.py
