[project]
name = "quantbet"
version = "1.0.0"
description = "End-to-end research pipeline for pricing soccer 1X2 markets: calibrated deep model, EV/Kelly bet selection, live paper-trading ledger."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aykan Orscelik" }]
dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
quantbet = "quantbet.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["quantbet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
